--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
@@ -43,5 +42,9 @@
   "license": "ISC",
   "directories": {
     "test": "tests"
+  },
+  "dependencies": {
+    "eslint-rule-composer": "^0.3.0",
+    "eslint-plugin-react": "^7.11.1"
   }
 }
